streamline the process

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,17 +6,17 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
     <!-- Rooms List Tab -->
-    <ion-tab title="Rooms" icon-off="ion-ios7-box-outline" icon-on="ion-ios7-box" href="#/tab/rooms">
+    <ion-tab title="Rooms" icon-off="ion-ios-box-outline" icon-on="ion-ios-box" href="#/tab/rooms">
         <ion-nav-view name="tab-rooms"></ion-nav-view>
     </ion-tab>
 
     <!-- Current Selected Chat Tab -->
-    <ion-tab title="Chat" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chat">
+    <ion-tab title="Chat" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chat">
         <ion-nav-view name="tab-chat"></ion-nav-view>
     </ion-tab>
 
     <!-- Logout Button -->
-    <ion-tab title="Logout" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" ng-click="logout()" href="">
+    <ion-tab title="Logout" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" ng-click="logout()" href="">
     </ion-tab>
 
 
