added password reset, and use ionic serve

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -18,6 +18,9 @@
             <button ng-click="signIn(user)" class="button button-block button-positive activated">
                 Sign In
             </button>
+            <button ng-click="reSet(user)" class="button button-block button-positive activated">
+                Reset My Password
+            </button>
         </div>
         <div class="list" style="text-align:center">
             <button ng-click="modal.show()" class="button button-small button-outline icon-left ion-person-add button-positive">
